[gd_scene load_steps=52 format=3 uid="uid://dlorf650vuq1e"]

[ext_resource type="Texture2D" uid="uid://dsycli0f5pmaq" path="res://topDownRooms/Sclub.png" id="1_kctjr"]
[ext_resource type="Script" path="res://topDownRooms/sclub.gd" id="1_x4i00"]
[ext_resource type="PackedScene" uid="uid://cukqggd2dkija" path="res://topDownRooms/player.tscn" id="2_017hj"]
[ext_resource type="PackedScene" uid="uid://cjiq67s52sku7" path="res://topDownRooms/dealer_race.tscn" id="4_qwnw8"]
[ext_resource type="PackedScene" uid="uid://ddioejp3sj4a4" path="res://topDownRooms/bot_6.tscn" id="6_r8xno"]
[ext_resource type="PackedScene" uid="uid://b2uu1nis3m26a" path="res://topDownRooms/bot_5.tscn" id="6_tnv0w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_02wi1"]
size = Vector2(36, 357)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7gwka"]
size = Vector2(24, 487)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ugi0b"]
size = Vector2(71, 196)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pbnhp"]
size = Vector2(211, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8rfry"]
size = Vector2(94, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ru0d2"]
size = Vector2(94, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sf47i"]
size = Vector2(94, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l15rk"]
size = Vector2(94, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cwv3h"]
size = Vector2(36, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tcuei"]
size = Vector2(142, 73)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jm6an"]
size = Vector2(517, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_072l6"]
size = Vector2(36, 119.773)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tmqxj"]
size = Vector2(36, 119.773)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oy1oy"]
size = Vector2(148, 50.8863)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rxqnt"]
radius = 19.0
height = 60.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xb46p"]
radius = 19.0
height = 60.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wnsxw"]
radius = 32.0
height = 190.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_whb8f"]
radius = 16.0
height = 72.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_njd4d"]
radius = 16.0
height = 72.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2e6tq"]
radius = 19.0
height = 60.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d3htm"]
radius = 19.0
height = 60.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_btoah"]
radius = 27.0
height = 54.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_axg24"]
radius = 27.0
height = 54.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e0x3m"]
radius = 27.0
height = 54.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u7vd7"]
radius = 19.0
height = 60.0

[sub_resource type="SegmentShape2D" id="SegmentShape2D_6v6dn"]
a = Vector2(-21, -34)
b = Vector2(-22, 233)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_k0dmr"]
a = Vector2(-21, -34)
b = Vector2(3, -32)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_dgrt8"]
a = Vector2(31, 1)
b = Vector2(3, -32)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_2xywl"]
a = Vector2(31, 1)
b = Vector2(29, 194)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_lo0rv"]
a = Vector2(12, 226)
b = Vector2(29, 194)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_8mcjk"]
a = Vector2(12, 226)
b = Vector2(-22, 231)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0fa5d"]
size = Vector2(140, 181)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ugjbg"]
size = Vector2(220, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0fmcf"]
size = Vector2(174, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_odxmp"]
size = Vector2(220, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6amj3"]
size = Vector2(173, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7m4ev"]
size = Vector2(56, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5ewh"]
size = Vector2(60.8961, 28)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_447ec"]
height = 140.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_58kgl"]
radius = 24.0
height = 210.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vbol1"]
size = Vector2(74, 65)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqw1d"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0142752, 0.0142752, 0.0142752, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30

[sub_resource type="LabelSettings" id="LabelSettings_uokl8"]
font_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48svk"]
bg_color = Color(0.597173, 0.597177, 0.597176, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.00184107, 0.00184107, 0.00184107, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_jcblr"]
font_size = 8

[node name="Sclub" type="Node2D"]
position = Vector2(1770, 22)
script = ExtResource("1_x4i00")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(317.255, 322)
scale = Vector2(1.04613, 1.0862)
texture = ExtResource("1_kctjr")

[node name="Player" parent="." instance=ExtResource("2_017hj")]
position = Vector2(-136, 274)
scale = Vector2(1.5, 1.5)

[node name="AnimatedSprite2D" parent="Player" index="0"]
animation = &"left"

[node name="Boundaries" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(642, 333.5)
shape = SubResource("RectangleShape2D_02wi1")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(-4, 402.5)
shape = SubResource("RectangleShape2D_7gwka")

[node name="CollisionShape2D24" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(145.5, 353)
shape = SubResource("RectangleShape2D_ugi0b")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(184.5, 635)
shape = SubResource("RectangleShape2D_pbnhp")

[node name="CollisionShape2D19" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(611, 635)
shape = SubResource("RectangleShape2D_8rfry")

[node name="CollisionShape2D20" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(532, 645)
shape = SubResource("RectangleShape2D_ru0d2")

[node name="CollisionShape2D21" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(324, 643)
shape = SubResource("RectangleShape2D_sf47i")

[node name="CollisionShape2D22" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(40, 644)
shape = SubResource("RectangleShape2D_l15rk")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(642, 604)
shape = SubResource("RectangleShape2D_cwv3h")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(425, 601.5)
shape = SubResource("RectangleShape2D_tcuei")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(317.5, 132)
shape = SubResource("RectangleShape2D_jm6an")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(593, 151)
rotation = -1.01229
shape = SubResource("RectangleShape2D_072l6")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(35, 154)
rotation = 0.959931
shape = SubResource("RectangleShape2D_tmqxj")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(204, 159.557)
shape = SubResource("RectangleShape2D_oy1oy")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(362, 149)
shape = SubResource("CapsuleShape2D_rxqnt")

[node name="CollisionShape2D15" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(375, 564)
shape = SubResource("CapsuleShape2D_xb46p")

[node name="CollisionShape2D18" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(215, 565)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wnsxw")

[node name="CollisionShape2D23" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(146, 452)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_whb8f")

[node name="CollisionShape2D25" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(145, 259)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_njd4d")

[node name="CollisionShape2D16" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(425, 563)
shape = SubResource("CapsuleShape2D_2e6tq")

[node name="CollisionShape2D17" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(473, 563)
shape = SubResource("CapsuleShape2D_d3htm")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(15, 237)
shape = SubResource("CapsuleShape2D_btoah")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(14, 331)
shape = SubResource("CapsuleShape2D_axg24")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(17, 429)
shape = SubResource("CapsuleShape2D_e0x3m")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(474, 149)
shape = SubResource("CapsuleShape2D_u7vd7")

[node name="CollisionShape2D26" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(530, 247)
shape = SubResource("SegmentShape2D_6v6dn")

[node name="CollisionShape2D27" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(530, 247)
shape = SubResource("SegmentShape2D_k0dmr")

[node name="CollisionShape2D28" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(530, 247)
shape = SubResource("SegmentShape2D_dgrt8")

[node name="CollisionShape2D29" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(530, 247)
shape = SubResource("SegmentShape2D_2xywl")

[node name="CollisionShape2D30" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(530, 247)
shape = SubResource("SegmentShape2D_lo0rv")

[node name="CollisionShape2D31" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(530, 247)
shape = SubResource("SegmentShape2D_8mcjk")

[node name="CollisionShape2D32" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(343, 350.5)
shape = SubResource("RectangleShape2D_0fa5d")

[node name="CollisionShape2D34" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(342, 304)
shape = SubResource("RectangleShape2D_ugjbg")

[node name="CollisionShape2D40" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(342, 385)
shape = SubResource("RectangleShape2D_0fmcf")

[node name="CollisionShape2D41" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(341, 401)
shape = SubResource("RectangleShape2D_odxmp")

[node name="CollisionShape2D35" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(343.5, 314)
shape = SubResource("RectangleShape2D_6amj3")

[node name="CollisionShape2D36" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(420, 284)
rotation = 0.610865
shape = SubResource("RectangleShape2D_7m4ev")

[node name="CollisionShape2D37" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(267.125, 283.574)
rotation = -0.698132
shape = SubResource("RectangleShape2D_y5ewh")

[node name="CollisionShape2D33" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(344, 256)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_447ec")

[node name="CollisionShape2D38" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(343, 417)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_58kgl")

[node name="Exit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(681, 546.5)
shape = SubResource("RectangleShape2D_vbol1")

[node name="dealer_race" parent="." instance=ExtResource("4_qwnw8")]
position = Vector2(-662, 279)
scale = Vector2(1.5, 1.5)

[node name="DealerRacePanel" type="Panel" parent="."]
visible = false
z_index = 5
offset_left = 110.0
offset_top = 411.0
offset_right = 329.0
offset_bottom = 478.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nqw1d")

[node name="DealerRaceSpeechBubble" type="Label" parent="DealerRacePanel"]
visible = false
z_index = 5
layout_mode = 0
offset_left = 13.0
offset_top = 17.0
offset_right = 292.0
offset_bottom = 106.0
text = "Would you like to play Horse Race
press y to play!
      "
label_settings = SubResource("LabelSettings_uokl8")

[node name="Bot_5" parent="." instance=ExtResource("6_tnv0w")]
position = Vector2(-333, -62)
scale = Vector2(1.5, 1.5)

[node name="BotPanel" type="Panel" parent="Bot_5"]
visible = false
offset_left = 456.0
offset_top = 88.0
offset_right = 548.0
offset_bottom = 126.0
theme_override_styles/panel = SubResource("StyleBoxFlat_48svk")

[node name="BotSpeechBubble" type="Label" parent="Bot_5/BotPanel"]
visible = false
layout_mode = 0
offset_left = 3.55556
offset_top = 6.22222
offset_right = 92.5556
offset_bottom = 57.2222
text = "Did you win your 
horse race"
label_settings = SubResource("LabelSettings_jcblr")
horizontal_alignment = 1

[node name="Bot_6" parent="." instance=ExtResource("6_r8xno")]
position = Vector2(-418, 209)
scale = Vector2(1.5, 1.5)

[node name="BotPanel" type="Panel" parent="Bot_6"]
visible = false
offset_left = 456.0
offset_top = 88.0
offset_right = 548.0
offset_bottom = 126.0
theme_override_styles/panel = SubResource("StyleBoxFlat_48svk")

[node name="BotSpeechBubble" type="Label" parent="Bot_6/BotPanel"]
visible = false
layout_mode = 0
offset_left = 3.55556
offset_top = 6.22222
offset_right = 92.5556
offset_bottom = 57.2222
text = "hey man you owe
me a drink!!"
label_settings = SubResource("LabelSettings_jcblr")
horizontal_alignment = 1

[connection signal="body_entered" from="Exit" to="." method="_on_exit_body_entered"]
[connection signal="body_entered" from="dealer_race/SpeechArea" to="." method="_on_speech_area_body_entered"]
[connection signal="body_exited" from="dealer_race/SpeechArea" to="." method="_on_speech_area_body_exited"]
[connection signal="body_entered" from="Bot_5/Bot5Area" to="." method="_on_bot_5_area_body_entered"]
[connection signal="body_exited" from="Bot_5/Bot5Area" to="." method="_on_bot_5_area_body_exited"]
[connection signal="body_entered" from="Bot_6/Bot6Area" to="." method="_on_bot_6_area_body_entered"]
[connection signal="body_exited" from="Bot_6/Bot6Area" to="." method="_on_bot_6_area_body_exited"]

[editable path="Player"]
[editable path="dealer_race"]
[editable path="Bot_5"]
[editable path="Bot_6"]
